compiler/testData/diagnostics/tests/objects/ObjectsInheritance.kt
// FIR_IDENTICAL
package toplevelObjectDeclarations

object CObj {}

object DOjb : <!SINGLETON_IN_SUPERTYPE!>CObj<!> {}
